--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,7 @@ jobs:
 
       - name: Copy docs to repo-f
         run: |
-          mkdir repo-f/docs-input
-          cp -r ${{ github.workspace }}/typedocs/* repo-f/docs-input/
+          cp -r ${{ github.workspace }}/typedocs/* ./docs-input/
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v4
