fixed download path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,8 @@ jobs:
           repository: "doriancrutcher/repo-f"
           ref: "main"
 
+      # get artifact to download
+
       - name: Get artifact
         uses: actions/download-artifact@v3
         with:
